@@ -1,5 +1,6 @@
 package com.intuit.tank.reporting.factory;
 
+import com.intuit.tank.reporting.api.DummyResultsReader;
 import org.apache.commons.configuration.HierarchicalConfiguration;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -22,17 +23,17 @@ public final class ReportingFactory {
      * 
      * @return
      */
-    public static final ResultsReporter getResultsReporter() {
+    public static ResultsReporter getResultsReporter() {
         ResultsReporter ret = null;
         try {
             ReportingConfig config = new TankConfig().getReportingConfig();
             String providerClass = config.getReporterClass();
-            ret = (ResultsReporter) Class.forName(providerClass).newInstance();
+            ret = (ResultsReporter) Class.forName(providerClass).getDeclaredConstructor().newInstance();
             HierarchicalConfiguration providerConfig = config.getProviderConfig();
             ret.config(providerConfig);
         } catch (Exception e) {
-            LOG.error("Error instantiating reporter");
-            ret = new DummyResultsReporter();
+            LOG.error("Error instantiating results reporter", e);
+            return new DummyResultsReporter();
         }
         return ret;
     }
@@ -40,17 +41,17 @@ public final class ReportingFactory {
      * 
      * @return
      */
-    public static final ResultsReader getResultsReader() {
+    public static ResultsReader getResultsReader() {
         ResultsReader ret = null;
         try {
             ReportingConfig config = new TankConfig().getReportingConfig();
             String providerClass = config.getReaderClass();
-            ret = (ResultsReader) Class.forName(providerClass).newInstance();
+            ret = (ResultsReader) Class.forName(providerClass).getDeclaredConstructor().newInstance();
             HierarchicalConfiguration providerConfig = config.getProviderConfig();
             ret.config(providerConfig);
         } catch (Exception e) {
-            LOG.error("Error instantiating reporter");
-//            ret = new DummyResultsReader();
+            LOG.error("Error instantiating results reader", e);
+            return new DummyResultsReader();
         }
         return ret;
     }
